--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,23 @@
+body {
+    padding: 0;
+    margin:0;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+
 .grid {
     display: grid;
-    width: 1000px;
-    grid-template-columns: 500px 50% 50%;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0.75fr 2fr 0.65fr;
     grid-gap: 12px 12px;
     justify-content: left;
-    align-content: center;
 }
 
 /** COMMON **/
 
 .box {
-    
+    border-radius: 15px;
 }
 
 .white {
@@ -70,6 +76,26 @@ ul {
     font-style: italic;
 }
 
+ul#language-rating {
+    list-style: none;
+}
+
+#language-rating li{
+    display: block;
+    width: 33%;
+    float: left;
+}
+
+#language-rating i {
+    color:  rgb(8, 33, 54);
+    padding-right: 10px;
+}
+
+#language-rating .language{
+    display: block;
+    width: 150px;
+}
+
 .year {
     font-family: Helvetica, sans-serif;
     padding-left: 20px;
@@ -80,18 +106,21 @@ ul {
 
 /** SKILLS **/
 #skills.box {
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 1 / 2 / 2 / 4;
+    border: 1px solid rgb(189, 183, 183);
+    margin-top: 20px;
 }
 
 /** EDUCATION **/
 #education.box {
-    grid-area: 1 / 3 / 2 / 4;
+    grid-area: 2 / 2 / 3 / 3;
+    border: 1px solid rgb(189, 183, 183);
 }
 
 
 /** EXPERIENCE **/
 #experience.box {
-    grid-area: 2 / 2 / 3 / 4;
+    grid-area: 2 / 3 / 3 / 4;
     border: 1px solid rgb(189, 183, 183);
 }
 
@@ -114,6 +143,8 @@ ul {
 #intro.box {
     grid-area: 1 / 1 / 4 / 2;
     background-color: rgb(8, 33, 54);
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 #name{
@@ -139,13 +170,13 @@ ul {
 }
 
 #profile-picture{
-    border-radius: 5%;
+    border-radius: 15px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 500px;
-    height: 450px;
+    width: 100%;
     opacity: 0.90;
+    background-color: #FFF;
 }
 
 #about {
@@ -184,15 +215,25 @@ a {
 
 /** HOBBIES **/
 
-#hobby.box {
+#hobbies.box{
     grid-area: 3 / 2 / 4 / 4;
-
+    border: 1px solid rgb(189, 183, 183);
 }
 
 .hobby{
-    border-radius: 50%;
+    border-radius: 100%;
     padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
     float: right;
+}
+
+#hobby-picture{
+    background-image: url('../img/hobby.jpg');
+    background-size: 250px;
+    width: 250px;
+    height: 250px;
+    border-radius: 100%;
+    float: right;
+    margin-right: 50px;
 }
