--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ body {
 
 .box {
     border-radius: 15px;
+    padding:10px;
 }
 
 .white {
@@ -64,7 +65,7 @@ ul {
     font-family: Helvetica, sans-serif;
     padding-left: 20px;
     padding-right: 20px;
-    font-size: 1em;
+    font-size: 14px;
     font-style: italic;
 }
 
